--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'my-library.java-common-conventions'
+    id 'com.adarshr.test-logger' version '2.1.1'
 }
 
 group = 'edu.austral.ingsis'
@@ -8,4 +9,28 @@ version = '1.0.1'
 
 dependencies {
     implementation project(':lexer')
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+}
+
+test {
+    useJUnitPlatform()
+
+    testlogger {
+        theme 'standard'
+        showExceptions true
+        showStackTraces true
+        showFullStackTraces false
+        showCauses true
+        slowThreshold 2000
+        showSummary true
+        showSimpleNames false
+        showPassed true
+        showSkipped true
+        showFailed true
+        showStandardStreams false
+        showPassedStandardStreams true
+        showSkippedStandardStreams true
+        showFailedStandardStreams true
+        logLevel 'lifecycle'
+    }
 }
