--- a/lexer/build.gradle
+++ b/lexer/build.gradle
@@ -1,7 +1,29 @@
 plugins {
     id 'java-library'
     id 'my-library.java-common-conventions'
+    id 'com.adarshr.test-logger' version '2.1.1'
 }
 
 group = 'edu.austral.ingsis'
 version = '1.0.1'
+
+test {
+    testlogger {
+        theme 'standard'
+        showExceptions true
+        showStackTraces true
+        showFullStackTraces false
+        showCauses true
+        slowThreshold 2000
+        showSummary true
+        showSimpleNames false
+        showPassed true
+        showSkipped true
+        showFailed true
+        showStandardStreams false
+        showPassedStandardStreams true
+        showSkippedStandardStreams true
+        showFailedStandardStreams true
+        logLevel 'lifecycle'
+    }
+}
