--- a/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'com.github.sherter.google-java-format'
+    id 'checkstyle'
 }
 
 repositories {
@@ -20,6 +21,18 @@ check.dependsOn jacocoTestCoverageVerification
 
 jacoco {
     toolVersion = "0.8.6"
+}
+
+checkstyle {
+    toolVersion "8.41.1"
+    configFile file("${rootDir}/config/checkstyle/checkstyle.xml")
+}
+
+checkstyleMain {
+    source = 'src/main/java'
+}
+checkstyleTest {
+    source = 'src/test/java'
 }
 
 
