added static code analyzer

--- a/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
@@ -35,6 +35,8 @@ checkstyleTest {
     source = 'src/test/java'
 }
 
+check.dependsOn(checkstyleMain)
+check.dependsOn(checkstyleTest)
 
 jacocoTestReport {
     dependsOn test
