--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project(':parser')
     implementation project(':lexer')
     implementation project(':interpreter')
+    implementation 'info.picocli:picocli:4.6.1'
 }
 
 application {
