--- a/lexer/build.gradle
+++ b/lexer/build.gradle
@@ -7,6 +7,11 @@ plugins {
 group = 'edu.austral.ingsis'
 version = '1.0.1'
 
+dependencies {
+    implementation project(':utils')
+    implementation 'com.google.code.gson:gson:2.8.6'
+}
+
 test {
     testlogger {
         theme 'standard'
