--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,2 @@
 rootProject.name = 'my-library'
-include 'interpreter', 'lexer', 'parser', 'app'
-
+include 'interpreter', 'lexer', 'parser', 'app', 'utils'
