--- a/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/my-library.java-common-conventions.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.13'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
