interpreter seems to be working, tests wip

--- a/interpreter/build.gradle
+++ b/interpreter/build.gradle
@@ -3,5 +3,12 @@ plugins {
     id 'my-library.java-common-conventions'
 }
 
+dependencies {
+    implementation project(':lexer')
+    implementation project(':parser')
+    implementation project(':utils')
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+}
+
 group = 'edu.austral.ingsis'
 version = '1.0.1'
