build gradle fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,13 @@ group = 'edu.austral.ingsis'
 version = '1.0.1'
 
 dependencies {
-    compile project(':parser')
-    compile project(':lexer')
-    compile project(':interpreter')
-    compile project(':utils')
     compile 'info.picocli:picocli:4.6.1'
     annotationProcessor 'info.picocli:picocli-codegen:4.6.1'
+
+    implementation project(':parser')
+    implementation project(':lexer')
+    implementation project(':interpreter')
+    implementation project(':utils')
 }
 
 compileJava {
