--- a/lexer/build.gradle
+++ b/lexer/build.gradle
@@ -10,6 +10,10 @@ version = '1.0.1'
 dependencies {
     implementation project(':utils')
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testImplementation group: 'org.skyscreamer', name: 'jsonassert', version: '1.2.3'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 }
 
 test {
