--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'com.adarshr.test-logger' version '2.1.1'
 }
 
-group = 'edu.austral.ingsis'
-version = '1.0.1'
+group = 'edu.austral.ingsis.ps'
+version = '1.1'
 
 dependencies {
     implementation project(':lexer')
