--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,9 +5,11 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ main, release/** ]
+    branches:
+      - '**'
   pull_request:
-    branches: [ main, release/** ]
+    branches:
+      - '**'
 
 jobs:
   build:
