--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'my-library.java-common-conventions'
+    id 'java-library'
 }
 
 group = 'edu.austral.ingsis.ps'
@@ -8,33 +9,24 @@ version = '1.1.1'
 
 dependencies {
     implementation 'info.picocli:picocli:4.6.1'
-    annotationProcessor 'info.picocli:picocli-codegen:4.6.1'
+    implementation project(':interpreter')
     implementation project(':parser')
     implementation project(':lexer')
-    implementation project(':interpreter')
     implementation project(':utils')
-}
-
-compileJava {
-    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
 }
 
 application {
     mainClass = 'edu.austral.ingsis.CLI'
 }
 
-configurations {
-    compile
-}
-
 jar {
     manifest {
         attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Class-Path': configurations.compileClasspath.collect { it.getName() }.join(' '),
                 'Main-Class': 'edu.austral.ingsis.CLI'
         )
     }
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
